Apply spotless
So many modifications for so little..